force-app/main/default/objects/Service_with_CHSP_Schedule_Detail__c/Service_with_CHSP_Schedule_Detail__c.object-meta.xml
<CustomObject>
    <label>Service with CHSP Schedule Detail</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Service with CHSP Schedule Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service with CHSP Schedule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>