force-app/main/default/objects/Service_with_CHSP_Schedule_Detail__c/fields/CHSP_Schedule_Detail__c.field-meta.xml
<CustomField>
    <fullName>CHSP_Schedule_Detail__c</fullName>
    <label>CHSP Schedule Detail</label>
    <referenceTo>CHSP_Service_Schedule__c</referenceTo>
    <relationshipLabel>Service with CHSP Schedule Details</relationshipLabel>
    <relationshipName>Service_with_CHSP_Schedule_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>