force-app/main/default/objects/Service_with_CHSP_Schedule_Detail__c/fields/LegacyCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>LegacyCreatedBy__c</fullName>
    <description>Legacy created by field.</description>
    <label>Legacy Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>