force-app/main/default/objects/Service_with_CHSP_Schedule_Detail__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Service with CHSP Schedule Details</relationshipLabel>
    <relationshipName>Service_with_CHSP_Schedule_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>